umami/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: umami-ingress
  namespace: umami
  namespace: umami
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app: umami
spec:
  ingressClassName: public
  rules:
    - host: umami.publio.online  
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: umami
                port:
                  number: 3000
  tls:
    - hosts:
        - umami.publio.online
      secretName: umami-tls
